[tool.poetry]
name = "tgtoolbox.poet"
version = "0.1.0"
description = ""
authors = ["WEI <w.pan@silence-theraptic.com>"]
packages = [
    { include = "tgtoolbox" },
    { include = "tgtoolbox/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
