[tool.poetry]
name = "Toolbox_goodbye"
version = "0.1.0"
description = ""
authors = ["WEI <w.pan@silence-theraptic.com>"]
packages = [
    { include = "BioInfoToolBox/goodbye", from = "toolbox" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
